--- a/html/index.html
+++ b/html/index.html
@@ -9,43 +9,66 @@
         max-width: 600px;
         margin: auto;
         padding: 20px;
+        background-color: #f9fafe; /* ほんの少し青みがかった白 */
+        color: #333;
       }
+
+      h1 {
+        text-align: center;
+        color: #2a72b5; /* おしゃれな青 */
+      }
+
       #dropArea {
         border: 2px dashed #aaa;
-        padding: 20px;
+        padding: 30px;
         text-align: center;
         margin-top: 20px;
         cursor: pointer;
-        transition: background-color 0.3s ease;
+        transition: background-color 0.3s ease, color 0.3s ease;
         color: #666;
+        font-size: 16px;
+        border-radius: 8px;
       }
+
       #dropArea:hover {
-        background-color: #f9f9f9;
+        background-color: #e3ecf5; /* ホバー時の青みがかった背景色 */
+        color: #333;
       }
+
       #processButton {
         margin-top: 20px;
-        padding: 10px 20px;
-        font-size: 16px;
+        padding: 12px 25px;
+        font-size: 18px;
         cursor: pointer;
-        background-color: #4caf50;
+        background-color: #2a72b5; /* プライマリカラーのおしゃれな青 */
         color: white;
         border: none;
-        border-radius: 5px;
+        border-radius: 8px;
         transition: background-color 0.3s ease;
+        display: block;
+        width: 100%;
       }
+
       #processButton:hover {
-        background-color: #45a049;
+        background-color: #205a8d; /* 濃い青のホバー色 */
       }
+
       input[type='radio'] {
         margin: 0 5px 0 15px;
       }
+
+      label {
+        font-size: 16px;
+      }
+
       pre {
         white-space: pre-wrap;
         background-color: #f4f4f4;
-        padding: 10px;
+        padding: 15px;
         border: 1px solid #ddd;
         margin-top: 20px;
-        border-radius: 5px;
+        border-radius: 8px;
+        font-size: 14px;
       }
     </style>
   </head>
@@ -59,7 +82,7 @@
     <div id="dropArea">ここにテキストファイルをドロップしてください</div>
 
     <!-- 置換の有無選択 -->
-    <div>
+    <div style="display: flex; align-items: center; margin-top: 10px">
       <input type="radio" id="noReplace" name="action" value="" checked />
       <label for="noReplace">置換しない</label>
       <input type="radio" id="replace" name="action" value="replace" />
